# vbt

./: .gitignore  flake.nix
firmware/: Cargo.toml
firmware/src/: accelerometer.rs  ble_config.rs  lib.rs
utils/data/: movement_detector.py  parse_data.py  shell.nix
zupt/: Cargo.toml
zupt/src/: lib.rs  stadistics.rs  utils.rs  zupt.rs
